swagger docs for key epoints
